--- a/app/globals.css
+++ b/app/globals.css
@@ -15,3 +15,9 @@
     --background-end-rgb: 0, 0, 0;
   }
 }
+
+@layer components {
+  .container-sm {
+    @apply mx-auto max-w-md sm:max-w-xs;
+  }
+}
